fixing overflow on grid

--- a/css/index.css
+++ b/css/index.css
@@ -165,12 +165,12 @@ box-shadow: 2px 3px 11px 4px rgba(49,49,49,0.48);
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 10px;
-  }
+    max-width: 100%;
+}
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 2em;
-    font-size: 16px;
+    padding: 2em 0;
+    font-size: 1em;
     text-align: center;
   }
   .grid-text{
